first draft? added output sounds, referencing

--- a/report/references.bib
+++ b/report/references.bib
@@ -10,3 +10,64 @@
 	year = {2015}
 }
 
+@misc{etsi-gsm,
+	author = {ETSI},
+	month = may,
+	organization = {European Telecommunications Standards Institute},
+	title = {Digital cellular telecommunications system (Phase 2+); Full rate speech; Transcoding; ETS 300 961},
+	url = {https://www.etsi.org/deliver/etsi_i_ets/300900_300999/300961/02_60/ets_300961e02p.pdf},
+	year = {1998}
+}
+
+@online{all-pole-resonance,
+	author = {Kim, Hyung-Suk},
+	organization = {Center for Computer Research in Music and Acoustics, Stanford University},
+	title = {Linear Predictive Coding is All-Pole Resonance Modeling},
+	url = {https://ccrma.stanford.edu/~hskim08/lpc},
+	year = {2014}
+}
+
+@article{quefrency,
+	author = {Oppenheim, A.V. and Schafer, Ronald},
+	doi = {10.1109/MSP.2004.1328092},
+	journal = {Signal Processing Magazine, IEEE},
+	month = {10},
+	pages = {95--106},
+	title = {From Frequency to Quefrency: A History of the Cepstrum},
+	url = {https://www.researchgate.net/publication/3321562_From_Frequency_to_Quefrency_A_History_of_the_Cepstrum},
+	volume = {21},
+	year = {2004}
+}
+
+@online{source-filter-macquaire,
+	author = {Mannell, Robert},
+	month = mar,
+	organization = {Department of Linguistics, Macquarie University},
+	title = {Source-Filter Theory of Speech Production},
+	url = {https://www.mq.edu.au/about/about-the-university/faculties-and-departments/medicine-and-health-sciences/departments-and-centres/department-of-linguistics/our-research/phonetics-and-phonology/speech/acoustics/acoustic-theory-of-speech-production/source-filter-theory},
+	year = {2020}
+}
+
+@online{max-min,
+	author = {{Whitman College}},
+	title = {Maxima and Minima},
+	url = {https://www.whitman.edu/mathematics/calculus_online/section05.01.html}
+}
+
+@online{islocalmax,
+	author = {{MathWorks}},
+	organization = {MathWorks},
+	subtitle = {Find local maxima},
+	title = {islocalmax},
+	url = {https://www.mathworks.com/help/matlab/ref/islocalmax.html}
+}
+
+@online{aalto-fundamental-freq,
+	author = {B{\"a}ckstr{\"o}m, Tom},
+	month = aug,
+	organization = {Aalto University},
+	title = {Fundamental frequency (F0)},
+	url = {https://wiki.aalto.fi/pages/viewpage.action?pageId=149890776},
+	year = {2020}
+}
+
